[tool.poetry]
name = "grid-character-reader"
version = "0.1.0"
description = "A tool to read and display Unicode character grids from Google Docs"
authors = ["Aaron Feingold <ajfeingold88@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.13.4"
argparse = "^1.4.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
